#2 swagger can now store authorization and made doc for user by id
